testdata/baselines/reference/submodule/compiler/jsxChildrenIndividualErrorElaborations.errors.txt
index.tsx(13,10): error TS2322: Type '{ children: (x: number) => number; }' is not assignable to type 'Props'.
  The types returned by 'children(...)' are incompatible between these types.
    Type 'number' is not assignable to type 'string'.
index.tsx(18,10): error TS2322: Type '{ children: string; }' is not assignable to type 'Props'.
  Types of property 'children' are incompatible.
    Type 'string' is not assignable to type '(x: number) => string'.
index.tsx(23,10): error TS2322: Type '{ children: (((x: number) => string) | ((x: number) => string))[]; }' is not assignable to type 'Props'.
  Types of property 'children' are incompatible.
    Type '(((x: number) => string) | ((x: number) => string))[]' is not assignable to type '(x: number) => string'.
      Type '(((x: number) => string) | ((x: number) => string))[]' provides no match for the signature '(x: number): string'.
index.tsx(37,10): error TS2322: Type '{ children: (x: any) => any; }' is not assignable to type 'PropsArr'.
  Types of property 'children' are incompatible.
    Type '(x: any) => any' is not assignable to type '((x: number) => string)[]'.
index.tsx(38,4): error TS7006: Parameter 'x' implicitly has an 'any' type.
index.tsx(42,10): error TS2322: Type '{ children: string; }' is not assignable to type 'PropsArr'.
  Types of property 'children' are incompatible.
    Type 'string' is not assignable to type '((x: number) => string)[]'.
index.tsx(47,10): error TS2322: Type '{ children: (((x: number) => number) | ((x: number) => number))[]; }' is not assignable to type 'PropsArr'.
  Types of property 'children' are incompatible.
    Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type '((x: number) => string)[]'.
      Type '((x: number) => number) | ((x: number) => number)' is not assignable to type '(x: number) => string'.
        Type '(x: number) => number' is not assignable to type '(x: number) => string'.
          Type 'number' is not assignable to type 'string'.
index.tsx(62,10): error TS2322: Type '{ children: (x: number) => number; }' is not assignable to type 'PropsMixed'.
  Types of property 'children' are incompatible.
    Type '(x: number) => number' is not assignable to type 'Cb[] | Cb'.
      Type '(x: number) => number' is not assignable to type 'Cb'.
        Type 'number' is not assignable to type 'string'.
index.tsx(67,10): error TS2322: Type '{ children: string; }' is not assignable to type 'PropsMixed'.
  Types of property 'children' are incompatible.
    Type 'string' is not assignable to type 'Cb[] | Cb'.
index.tsx(72,10): error TS2322: Type '{ children: (((x: number) => number) | ((x: number) => number))[]; }' is not assignable to type 'PropsMixed'.
  Types of property 'children' are incompatible.
    Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type 'Cb[] | Cb'.
      Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type 'Cb[]'.
        Type '((x: number) => number) | ((x: number) => number)' is not assignable to type 'Cb'.
          Type '(x: number) => number' is not assignable to type 'Cb'.
            Type 'number' is not assignable to type 'string'.


==== index.tsx (10 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
    
    interface Props {
      children: (x: number) => string;
    }
    
    export function Blah(props: Props) {
      return <></>;
    }
    
    // Incompatible child.
    var a = <Blah>
             ~~~~
!!! error TS2322: Type '{ children: (x: number) => number; }' is not assignable to type 'Props'.
!!! error TS2322:   The types returned by 'children(...)' are incompatible between these types.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
      {x => x}
    </Blah>
    
    // Blah components don't accept text as child elements
    var a = <Blah>
             ~~~~
!!! error TS2322: Type '{ children: string; }' is not assignable to type 'Props'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '(x: number) => string'.
      Hello unexpected text!
    </Blah>
    
    // Blah components don't accept multiple children.
    var a = <Blah>
             ~~~~
!!! error TS2322: Type '{ children: (((x: number) => string) | ((x: number) => string))[]; }' is not assignable to type 'Props'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '(((x: number) => string) | ((x: number) => string))[]' is not assignable to type '(x: number) => string'.
!!! error TS2322:       Type '(((x: number) => string) | ((x: number) => string))[]' provides no match for the signature '(x: number): string'.
      {x => "" + x}
      {x => "" + x}
    </Blah>
    
    interface PropsArr {
      children: ((x: number) => string)[];
    }
    
    export function Blah2(props: PropsArr) {
      return <></>;
    }
    
    // Incompatible child.
    var a = <Blah2>
             ~~~~~
!!! error TS2322: Type '{ children: (x: any) => any; }' is not assignable to type 'PropsArr'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '(x: any) => any' is not assignable to type '((x: number) => string)[]'.
      {x => x}
       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    </Blah2>
    
    // Blah2 components don't accept text as child elements
    var a = <Blah2>
             ~~~~~
!!! error TS2322: Type '{ children: string; }' is not assignable to type 'PropsArr'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '((x: number) => string)[]'.
      Hello unexpected text!
    </Blah2>
    
    // Blah2 components don't accept multiple children of the wrong type.
    var a = <Blah2>
             ~~~~~
!!! error TS2322: Type '{ children: (((x: number) => number) | ((x: number) => number))[]; }' is not assignable to type 'PropsArr'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type '((x: number) => string)[]'.
!!! error TS2322:       Type '((x: number) => number) | ((x: number) => number)' is not assignable to type '(x: number) => string'.
!!! error TS2322:         Type '(x: number) => number' is not assignable to type '(x: number) => string'.
!!! error TS2322:           Type 'number' is not assignable to type 'string'.
      {x => x}
      {x => x}
    </Blah2>
    
    type Cb = (x: number) => string;
    interface PropsMixed {
      children: Cb | Cb[];
    }
    
    export function Blah3(props: PropsMixed) {
      return <></>;
    }
    
    // Incompatible child.
    var a = <Blah3>
             ~~~~~
!!! error TS2322: Type '{ children: (x: number) => number; }' is not assignable to type 'PropsMixed'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '(x: number) => number' is not assignable to type 'Cb[] | Cb'.
!!! error TS2322:       Type '(x: number) => number' is not assignable to type 'Cb'.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
      {x => x}
    </Blah3>
    
    // Blah3 components don't accept text as child elements
    var a = <Blah3>
             ~~~~~
!!! error TS2322: Type '{ children: string; }' is not assignable to type 'PropsMixed'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'Cb[] | Cb'.
      Hello unexpected text!
    </Blah3>
    
    // Blah3 components don't accept multiple children of the wrong type.
    var a = <Blah3>
             ~~~~~
!!! error TS2322: Type '{ children: (((x: number) => number) | ((x: number) => number))[]; }' is not assignable to type 'PropsMixed'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type 'Cb[] | Cb'.
!!! error TS2322:       Type '(((x: number) => number) | ((x: number) => number))[]' is not assignable to type 'Cb[]'.
!!! error TS2322:         Type '((x: number) => number) | ((x: number) => number)' is not assignable to type 'Cb'.
!!! error TS2322:           Type '(x: number) => number' is not assignable to type 'Cb'.
!!! error TS2322:             Type 'number' is not assignable to type 'string'.
      {x => x}
      {x => x}
    </Blah3>
    